Bug 1682800 - Make inflation fail if there is no enough memory r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D100060